--- a/build.gradle
+++ b/build.gradle
@@ -253,6 +253,12 @@ configure(allprojects) { project ->
 			cacheChangingModulesFor 0, "seconds"
 		}
 		repositories {
+			//aliyun mirror
+			maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+			maven { url 'https://maven.aliyun.com/repository/spring/' }
+			maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
+
+			
 			mavenCentral()
 			maven { url "https://repo.spring.io/libs-spring-framework-build" }
 			maven { url "https://repo.spring.io/milestone" } // temporarily for context-propagation via Reactor Netty
