--- a/spring-study-Demo/build.gradle
+++ b/spring-study-Demo/build.gradle
@@ -13,7 +13,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation(project(":spring-context"))
+    implementation(project(":spring-aop"))
     implementation(project(":spring-instrument"))
+    implementation("org.aspectj:aspectjweaver:1.9.9.1")
     implementation("javax.annotation:javax.annotation-api:1.3.2")
 
 }
