some notes and study build spring beans

--- a/spring-study-Demo/build.gradle
+++ b/spring-study-Demo/build.gradle
@@ -12,11 +12,16 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
     implementation(project(":spring-context"))
     implementation(project(":spring-aop"))
     implementation(project(":spring-instrument"))
+//    aop -> aspectj
     implementation("org.aspectj:aspectjweaver:1.9.9.1")
+//    @Resource
     implementation("javax.annotation:javax.annotation-api:1.3.2")
+    implementation("cglib:cglib:3.3.0")
+
 
 }
 
